--- a/test/context.html
+++ b/test/context.html
@@ -6,7 +6,9 @@
 	</head>
 	<body>
 		<div id="qunit"></div>
-		<div id="qunit-fixture"></div>
+		<div id="qunit-fixture">
+			<div id="mod-test1" class="module" data-module="test"></div>
+		</div>
 
 		<script src="../lib/jquery-1.10.2.js"></script>
 		<script src="../lib/qunit-1.12.0.js"></script>
