Clean-up original repo files for github page site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World!
+---
+layout: default
+title: T3 Javascript Framework
+---
+
+<section>
+    <h2>Overview</h2>
+    <p>
+        Stuff
+    </p>
+</section>
