--- a/test/event-target.html
+++ b/test/event-target.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>QUnit - Event-Target</title>
-		<link rel="stylesheet" href="../lib/qunit-1.12.0.css" type="text/css" media="screen" />
-	</head>
-	<body>
-		<div id="qunit"></div>
-		<div id="qunit-fixture"></div>
+<head>
+	<title>Mocha - Event Target</title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="../node_modules/mocha/mocha.css" type="text/css" media="screen" />
 
-		<script src="../lib/jquery-1.10.2.js"></script>
-		<script src="../lib/qunit-1.12.0.js"></script>
-		<script src="../lib/sinon-1.7.3.js"></script>
-		<script src="../lib/sinon-qunit-1.0.0.js"></script>
+	<!-- Testing Dependencies -->
+	<script src="utils/assert.js"></script>
+	<script src="../node_modules/assertive-chai/assertive-chai.js"></script>
+	<script src="../node_modules/mocha/mocha.js"></script>
+	<script src="../node_modules/jquery/dist/jquery.js"></script>
+	<script src="../node_modules/sinon/pkg/sinon.js"></script>
+</head>
+<body>
+	<div id="mocha"></div>
+	<div id="mocha-fixture"></div>
 
-		<script src="application-stub.js"></script>
-		<script src="../src/event-target.js"></script>
-		<script src="event-target.js"></script>
-	</body>
+	<!-- Initialize Mocha and Setup Globals -->
+	<script src="utils/common-setup.js"></script>
+
+	<!-- Test scripts -->
+	<script src="utils/application-stub.js"></script>
+	<script src="../src/event-target.js"></script>
+	<script src="event-target.js"></script>
+
+	<!-- Test Runner Executed Last -->
+	<script src="utils/test-runner.js"></script>
+</body>
 </html>
