--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -1,97 +1,90 @@
-<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>T3 • TodoNotMVC</title>
-		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
-		<!-- CSS overrides - remove if you don't need it -->
-		<link rel="stylesheet" href="css/app.css">
-	</head>
-	<body>
-		<section id="todoapp" class="module" data-module="todo">
-			<header id="header">
-				<h1>todos</h1>
-				<form data-type="new-todo-form">
-					<input id="new-todo" name="new-todo" placeholder="What needs to be done?" autofocus>
-				</form>
-			</header>
-			<!-- This section should be hidden by default and shown when there are todos -->
-			<section id="main">
-				<input id="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
-				<ul id="todo-list">
-				</ul>
-			</section>
-			<!-- This footer should hidden by default and shown when there are todos -->
-			<footer id="footer">
-				<!-- This should be `0 items left` by default -->
-				<span id="todo-count"><strong>1</strong> item left</span>
-				<!-- Remove this if you don't implement routing -->
-				<ul id="filters">
-					<li>
-						<a class="selected" href="#/">All</a>
-					</li>
-					<li>
-						<a href="#/active">Active</a>
-					</li>
-					<li>
-						<a href="#/completed">Completed</a>
-					</li>
-				</ul>
-				<!-- Hidden if no completed items are left ↓ -->
-				<button id="clear-completed" data-type="clear-btn">Clear completed (1)</button>
-			</footer>
-		</section>
-		<footer id="info">
-			<p>Double-click to edit a todo</p>
-			<!-- Remove the below line ↓ -->
-			<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
-			<!-- Change this out with your name and url ↓ -->
-			<p>Created by <a href="http://todomvc.com">you</a></p>
-			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-		</footer>
-
-		<!-- These are here just to show the structure of the list items -->
-		<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-		<ul id="templates">
-			<li class="completed">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>T3 • TodoNotMVC</title>
+	<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+	<link rel="stylesheet" href="css/app.css">
+</head>
+<body>
+<section id="todoapp" class="module" data-module="page">
+	<header id="header" class="module" data-module="header">
+		<h1>todos</h1>
+		<form data-type="new-todo-form">
+			<input id="new-todo" data-type="new-todo-input" name="new-todo" placeholder="What needs to be done?" autofocus autocomplete="off">
+		</form>
+	</header>
+	<section id="main" class="module" data-module="list">
+		<input id="toggle-all" data-type="select-all-checkbox" type="checkbox">
+		<label for="toggle-all">Mark all as complete</label>
+		<ul id="todo-list">
+		</ul>
+		<ul class="todo-template-container" style="display: none">
+			<li>
 				<div class="view">
-					<input class="toggle" type="checkbox" checked>
-					<label>Create a TodoMVC template</label>
-					<button class="destroy"></button>
+					<input class="toggle" type="checkbox" data-type="mark-as-complete-checkbox">
+					<label data-type="todo-label"></label>
+					<button class="destroy" data-type="delete-btn"></button>
 				</div>
-				<input class="edit" value="Create a TodoMVC template">
-			</li>
-			<li class="todo-template">
-				<form data-type="edit-form">
-					<div class="view">
-						<input class="toggle" type="checkbox" data-type="complete-btn">
-						<label data-type="todo-label"></label>
-						<button class="destroy" data-type="destroy-btn"></button>
-					</div>
-					<input class="edit" name="title">
-				</form>
+				<input class="edit" data-type="edit-input" value="a">
 			</li>
 		</ul>
-
-		<!-- Scripts here. Don't remove this ↓ -->
-		<script src="bower_components/todomvc-common/base.js"></script>
-
-		<!-- Framework scripts -->
-		<script src="../../lib/jquery-1.10.2.js"></script>
-		<script src="../../src/box.js"></script>
-		<script src="../../src/context.js"></script>
-		<script src="../../src/event-target.js"></script>
-		<script src="../../src/application.js"></script>
-
-		<!-- App scripts -->
-		<script src="js/app.js"></script>
-		<script>
-			Box.Application.init({
-				debug: true
-			});
-		</script>
-
-	</body>
+	</section>
+	<footer id="footer" class="module" data-module="footer">
+		<span id="todo-count"><strong class="items-left-counter">0</strong> <span class="items-left-text">items left</span></span>
+		<ul id="filters">
+			<li>
+				<a class="selected" href="./">All</a>
+			</li>
+			<li>
+				<a href="./active">Active</a>
+			</li>
+			<li>
+				<a href="./completed">Completed</a>
+			</li>
+		</ul>
+		<button id="clear-completed" data-type="clear-btn">Clear completed (<span class="completed-count">1</span>)</button>
+	</footer>
+</section>
+<footer id="info">
+	<p>Double-click to edit a todo</p>
+	<p>Created by <a href="http://github.com/box">Box</a></p>
+	<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+</footer>
+<ul id="templates" style="display:none">
+	<li class="completed">
+		<div class="view">
+			<input class="toggle" type="checkbox" checked>
+			<label>Create a TodoMVC template</label>
+			<button class="destroy"></button>
+		</div>
+	</li>
+	<li class="todo-template">
+		<form data-type="edit-form">
+			<div class="view">
+				<input class="toggle" type="checkbox" data-type="complete-btn">
+				<label data-type="todo-label"></label>
+				<button class="destroy" data-type="destroy-btn"></button>
+			</div>
+			<input class="edit" name="title">
+		</form>
+	</li>
+</ul>
+<script src="bower_components/jquery-1.11.1.min/index.js"></script>
+<script src="bower_components/todomvc-common/base.js"></script>
+<script src="js/t3-dev-build.js"></script>
+<script src="js/app.js"></script>
+<script src="js/services/todos-db.js"></script>
+<script src="js/services/router.js"></script>
+<script src="js/behaviors/todo.js"></script>
+<script src="js/modules/header.js"></script>
+<script src="js/modules/footer.js"></script>
+<script src="js/modules/list.js"></script>
+<script src="js/modules/page.js"></script>
+<script>
+	Application.init({
+		debug: true
+	});
+</script>
+</body>
 </html>
